p2/provisions/manifests/app2/app2.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-two-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: app-two-ingress
  rules:
  - host: app2.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-two-service
            port:
              number: 80
